# legacy.artccel

./: .clang-tidy  .gitignore  CMakeLists.txt
artccel-core/: CMakeLists.txt
artccel-core/in/: config.h
artccel-core/include/artccel-core/: compute.hpp  concurrent.hpp  encoding.hpp  enum_bitset.hpp  interval.hpp  main_hooks.hpp  polyfill.hpp  reflect.hpp  semantics.hpp
artccel-core/include/artccel-core/compute/: compute.hpp
artccel-core/include/artccel-core/geometry/: geometry.hpp  geometry_impl.hpp
artccel-core/include/artccel-core/util/: cerrno_extras.hpp  clone.hpp  clone_macros.hpp  codecvt_extras.hpp  concepts_extras.hpp  concurrent.hpp  containers_extras.hpp  conversions.hpp  encoding.hpp  enum_bitset.hpp  error_handling.hpp  exception_extras.hpp  interval.hpp  meta.hpp  numeric_conversions.hpp  polyfill.hpp  reflect.hpp  semantics.hpp  utility_extras.hpp
artccel-core/include/artccel/core/: main_hooks.hpp  precompile.h
artccel-core/include/artccel/core/compute/: compute.hpp
artccel-core/include/artccel/core/geometry/: geometry.hpp  geometry_impl.hpp
artccel-core/include/artccel/core/platform/: windows_error.hpp
artccel-core/include/artccel/core/util/: bitset_extras.hpp  cerrno_extras.hpp  clone.hpp  codecvt_extras.hpp  concepts_extras.hpp  concurrent.hpp  containers.hpp  containers_extras.hpp  contracts.hpp  conversions.hpp  encoding.hpp  enum_bitset.hpp  error_handling.hpp  exception_extras.hpp  interval.hpp  meta.hpp  polyfill.hpp  reflect.hpp  semantics.hpp  string_extras.hpp  utility_extras.hpp
artccel-core/sources/: cerrno_extras.cpp  clone.cpp  compute.cpp  concurrent.cpp  encoding.cpp  enum_bitset.cpp  error_handling.cpp  exception_extras.cpp  geometry.cpp  interval.cpp  main_hooks.cpp  polyfill.cpp  reflect.cpp  template_instantiations.cpp  utility_extras.cpp  windows_error.cpp
artccel-core/sources/exe/: main.cpp
artccel-core/src/: encoding.cpp  placeholder.cpp
artccel-core/src/exe/: main.cpp
artccel-core/tests/: main.cpp
build_auto/: dependencies.cmake  init.cmake  util.cmake
build_auto/data/: dependencies.cmake
build_auto/init/: build.cmake  dependencies.cmake  generate.cmake  languages.cmake  modules.cmake  options.cmake  tests.cmake  tools.cmake
in/: CTestCustom.cmake  Config.cmake  config.cmake  config.h
include/artccel/: precompile.h
libartccel/: .gitignore
